<resources>
    <string name="app_name">Task</string>
    <string name="welcome">Welcome</string>
    <string name="uName">Joe</string>
    <string name="closedLeads">Closed Leads</string>
    <string name="month">Jan 2017</string>
    <string name="time">04:20PM</string>
    <string name="callerName">Chris Martin</string>
    <string name="category">Hot</string>
    <string name="followUp">Today\'s FollowUp</string>
    <string name="analytics">Analytics</string>
    <string name="converstion">Converstion Ratio : 35/75</string>
    <string name="closed">Closed</string>
    <string name="next_follow_up">Next Follow Up</string>
    <string name="dateFollowUp">15th March 2017</string>
    <string name="model_intersted">Model Interested</string>
    <string name="model_intersted_name">AC Bus 12 Seaters</string>
    <string name="edit">Edit</string>
    <string name="expected_price">Expected Price</string>
    <string name="expected_price_values">1,50,000</string>
    <string name="address">Address</string>
    <string name="full_address">H.No 5, Sadhbhavna Enclave</string>
    <string name="tvDistrict">District</string>
    <string name="city">City</string>
    <string name="city_name">Indore</string>
    <string name="district_name">Indore</string>
    <string name="state">State</string>
    <string name="state_name">M.P.</string>
    <string name="StatusOf">Status to be Delivered</string>
    <string name="booked">Booked</string>
    <string name="delivered">Delivered</string>
    <string name="deffrered">Deffered</string>
    <string name="lost">Lost</string>
    <string name="Hot">Hot</string>
    <string name="Opened">Opened</string>
    <string name="status">Status</string>
    <string name="activity">Activity</string>
    <string name="info">Info</string>
    <string name="todays_followUp">Today\'s FollowUp</string>
    <string name="yesterdays_followup">Yesterday\'s FollowUp</string>
    <string name="Click">CLick</string>
    <string name="vehicle_category">Vehicle Category</string>
    <string name="passenger_carrier">Passenger Carrier</string>
    <string name="good_carrier">Goods Carrier</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="cng">CNG</string>
    <string name="diesel">Diesel</string>
    <string name="Vehicle_type">Vehicle Type</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="air_condition">Air Conditioning</string>
    <string name="ac">A.C.</string>
    <string name="nonAc">Non A.C.</string>
    <string name="build_up_bus">Build Up Bus</string>
    <string name="bus_chasis">Bus Chasis</string>
    <string name="body_type">Body Type</string>
    <string name="choose_an_option">Choose an Option..</string>
    <string name="seat_capacity">Seat Capacity</string>
    <string name="wheel_base">Wheel Base</string>
    <string name="color">Color</string>
    <string name="hydraulic">Hydraulic</string>
    <string name="airBrake">Air Brake</string>
    <string name="brake_type">Brake Type</string>
    <string name="vehicle_group">Vehicle Group</string>
    <string name="cargo_type">Cargo Type</string>
    <string name="cargo_length">Cargo Length</string>
    <string name="save">SAVE</string>
</resources>
