<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kris.task.activity.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants">

        <LinearLayout
            android:id="@+id/llWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/margin_twentyFour"
            android:layout_marginEnd="@dimen/margin_twentyFour">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/textTwenty" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/four"
                android:text="@string/uName"
                android:textColor="@color/red"
                android:textSize="@dimen/textTwenty"
                android:paddingEnd="@dimen/four" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvClosedLeads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/barchart"
            android:layout_alignEnd="@+id/rvMain"
            android:layout_alignRight="@+id/rvMain"
            android:paddingEnd="@dimen/four"
            android:text="@string/closedLeads"
            android:textColor="@color/red"
            android:textSize="@dimen/textSixteen"
            android:textStyle="bold"
            android:paddingStart="@dimen/four" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barchart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/twoHundred"
            android:layout_below="@+id/llWelcome">

        </com.github.mikephil.charting.charts.BarChart>

        <TextView
            android:id="@+id/tvMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/barchart"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:text="@string/month" />

        <TextView
            android:id="@+id/tvPops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/llWelcome"
            android:layout_alignStart="@+id/llWelcome"
            android:layout_below="@+id/tvMonth"
            android:text="@string/followUp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/twelve"
            android:drawableRight="@drawable/downarrow"
            android:drawablePadding="@dimen/twelve"
            android:textSize="@dimen/textTwenty" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvPops"
            android:layout_margin="@dimen/twelve"

            >

        </android.support.v7.widget.RecyclerView>


    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
